# hyphae

./: .env.example  .gitignore  DARIUS.md  FEATURES.md  LOCAL_SETUP.md  README.md  STEFI.md  app.py  benchmark.py  check_ids.js  cli.py  diagnose.js  ingest.py  main.py  nohup.out  privacy.py  pyproject.toml  requirements.txt  setup.sh  start_server.sh  test_routing.py  test_server.sh  tools.py  voice.py
.cursor/rules/: hyphae-project.mdc
.github/workflows/: ci.yml
corpus/: .sensitivity.json  N1 (2).txt  StefaniaMozacu_CV.txt  battery_cycling_log.txt  biocompatibility_assay.txt  conductive_hydrogel_synthesis.txt  electrode_impedance_study.txt  hardware_setup.txt  literature_review_self_healing.txt  notes.txt  paper1.txt  paper2.txt  polymer_synthesis_notes.txt
corpus/notes/: 20260221_120256_test_observation.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  OPERATIONS.md  PLAN.md  RESULTS.md  SECURITY.md
examples/: basic_query.py  corpus_management.py  voice_demo.py
scripts/: check_env.py  check_ids.js  diagnose.js  setup.sh  start_server.sh  submit.py  test_server.sh  tune_threshold.py
src/: __init__.py  config.py  ingest.py  privacy.py  tools.py  voice.py
src/core/: __init__.py  config.py  engine.py  extractors.py  json_repair.py  privacy.py  rule_extractor.py  tools.py  voice.py
src/ingestion/: __init__.py  corpus.py
tests/: conftest.py  test_db.py  test_ingest.py  test_privacy.py  test_routing.py  test_tools.py  test_web_api.py
tests/integration/: test_auth_api.py  test_auth_hardening.py  test_code_isolation.py  test_corpus_api.py  test_idor_sweep.py  test_notes_collaboration.py  test_routing.py  test_security_fixes.py  test_ssrf_redirects.py  test_tags_analytics_planning.py  test_validation.py  test_web_api.py
tests/unit/: test_citations.py  test_corpus_utils.py  test_db.py  test_embed_selection.py  test_engine.py  test_export.py  test_extractors.py  test_faiss_persistence.py  test_ingest.py  test_json_repair.py  test_planning_digest.py  test_privacy.py  test_retrieval_concurrency.py  test_router.py  test_sanitiser.py  test_tools.py
web/: __init__.py  app.py  bootstrap.py  citations.py  db.py  embed.py  ingest_nb.py  middleware.py  models.py  notebook.db  notebook_bootstrap.py  retrieval.py
web/indexes/: 9d55c240-132f-49f2-bad8-fb8160f51178.ids  9d55c240-132f-49f2-bad8-fb8160f51178.index  demo-bioelectronics-notebook.ids  demo-bioelectronics-notebook.index
web/notebook/: __init__.py  citations.py  db.py  embed.py  ingest.py  models.py  retrieval.py  sanitiser.py
web/routes/: _authz.py  _validators.py  analytics.py  auth.py  code.py  collaboration.py  corpus.py  export.py  features.py  notebooks.py  notes.py  planning.py  query.py  tags.py
web/static/: app.js  index.html  style.css
web/static/js/: auth.js  code-ide.js  features.js  ui.js
web/uploads/demo-bioelectronics-notebook/: _paper.html
